--- a/main.css
+++ b/main.css
@@ -92,6 +92,11 @@ a {
   margin-right: 14px;
 }
 
+.header-menu-item:hover {
+  text-decoration: underline;
+  text-decoration-style: dashed;
+}
+
 #project-list {
 }
 
