underline the page we're on

--- a/main.css
+++ b/main.css
@@ -97,6 +97,12 @@ a {
   text-decoration-style: dashed;
 }
 
+/* to indicate what page we're on */
+.underline-dashed {
+  text-decoration: underline;
+  text-decoration-style: dashed;
+}
+
 #project-list {
 }
 
