--- a/main.css
+++ b/main.css
@@ -14,6 +14,24 @@ a {
   text-decoration: inherit;
 }
 
+/* off-white backgrounds colors */
+.yellow-bg {
+  background-color: #FFF8E6;
+}
+
+.purple-bg {
+  background-color: #fcebff;
+}
+
+.blue-bg {
+  background-color: #efffff;
+}
+
+.green-bg {
+  background-color: #eaffee;
+}
+
+/* visited link colors */
 .yellow-link:visited {
   color: #c4ad6c;
 }
@@ -28,6 +46,13 @@ a {
 
 .green-link:visited {
   color: #6a9f70;
+}
+
+.waves-bg {
+  /* livingstills.nl */
+  background-image: url(assets/waves.gif);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 
@@ -46,22 +71,6 @@ a {
   padding-bottom: 80px;
 }
 
-/* off-white backgrounds colors */
-.yellow-bg {
-  background-color: #FFF8E6;
-}
-
-.purple-bg {
-  background-color: #fcebff;
-}
-
-.blue-bg {
-  background-color: #efffff;
-}
-
-.green-bg {
-  background-color: #eaffee;
-}
 
 
 #header {
