--- a/main.css
+++ b/main.css
@@ -48,13 +48,6 @@ a {
   color: #6a9f70;
 }
 
-.waves-bg {
-  /* livingstills.nl */
-  background-image: url(assets/waves.gif);
-  background-size: cover;
-  background-attachment: fixed;
-}
-
 
 * {
   user-select: none !important;
@@ -137,4 +130,17 @@ a {
   background-color: black;
 }
 
+.invisible {
+  opacity: 0;
+}
 
+.waves-bg {
+  /* livingstills.nl */
+  background-image: url(assets/waves.gif);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.black-bg {
+  background-color: black;
+}
