--- a/main.css
+++ b/main.css
@@ -18,7 +18,6 @@ a {
   text-decoration: inherit;
 }
 
-
 img {
   width: 100%;
 }
@@ -88,6 +87,11 @@ img {
   font-size: 16px;
   margin-left:32px;
   display: inline;
+}
+
+.about a {
+  text-decoration: underline;
+  text-decoration-style: dashed;
 }
 
 .documentation a {
